# TextSequence

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md
backend/: pyproject.toml
backend/app/: application.py  guard_models.py  main.py  mcp_contracts.py  mcp_resources.py  mcp_server.py  restore_models.py  revision_diff_models.py  transaction_models.py
backend/app/agent/: __init__.py  context.py  runtime.py
backend/app/api/: routes.py
backend/app/audio/: __init__.py  silence.py
backend/app/domain/: frame_math.py  models.py  operations.py  silence.py
backend/app/media/: probe.py
backend/app/persistence/: migrations.py  project_store.py  revisions.py
backend/app/rendering/: ffmpeg.py  plan.py
backend/app/services/: guards.py  projections.py  projects.py  query.py  restore.py  revision_diff.py  timeline.py  transactions.py
backend/scripts/: live_agent_smoke.py
backend/tests/: conftest.py  test_clip_api.py  test_domain.py  test_markers.py  test_mcp_phase_a.py  test_media_import.py  test_persistence.py  test_render_plan.py  test_rendering.py  test_silence.py  test_v022_read_surface.py  test_v023_revision_diff.py  test_v030_transactions.py  test_v031_restore.py  test_v040_guards.py  test_v050_multitrack.py  test_v2_foundation.py
backend/tests/fixtures/v1/: empty.json  future_schema.json  imported.json  revision_nonzero.json  silence_derived.json  split_trim_moved.json  unknown_field.json
docs/: architecture.md  build-week-submission.md  demo-script.md  demo-workflow.md  mcp-clients.md
(+8 files in other folders)
