[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "textsequence-backend"
version = "0.3.1"
requires-python = ">=3.10"
dependencies = ["fastapi>=0.115,<1", "uvicorn[standard]>=0.30,<1", "python-multipart>=0.0.9,<1", "mcp>=1.27,<2", "openai-agents==0.18.3", "cryptography>=42,<45"]

[project.optional-dependencies]
test = ["pytest>=8,<9", "httpx>=0.27,<1"]

[tool.pytest.ini_options]
pythonpath = ["."]
